parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALORS
    AW
    DIR
    KHROJ
    KLMA
    MA39OFALIMN
    MA39OFALISSER
    MINAJL
    SCAN
    TABITA
    W
    WLA

Grammar

Rule 0     S' -> statement
Rule 1     statement -> IDA 9AWSLISSER comparaison 9AWSLIMEN { expression }
Rule 2     statement -> BAYNAMA 9AWSLISSER comparaison 9AWSLIMEN expression
Rule 3     comparaison -> expression KBER expression
Rule 4     comparaison -> expression SGHER expression
Rule 5     comparaison -> expression TOSSAWI expression
Rule 6     comparaison -> expression TOKHALIF expression
Rule 7     statement -> expression
Rule 8     statement -> KTEB 9AWSLISSER expression 9AWSLIMEN
Rule 9     statement -> MOTAGHAYIR AFFECT expression
Rule 10    expression -> MOTAGHAYIR
Rule 11    expression -> expression ZA2ID term
Rule 12    expression -> expression NA9IS term
Rule 13    expression -> term
Rule 14    term -> term DERB factor
Rule 15    term -> term 9ISMA factor
Rule 16    term -> factor
Rule 17    factor -> 3ADAD
Rule 18    factor -> 9AWSLISSER expression 9AWSLIMEN
Rule 19    empty -> <empty>
Rule 20    expression -> NA9IS expression

Terminals, with rules where they appear

3ADAD                : 17
9AWSLIMEN            : 1 2 8 18
9AWSLISSER           : 1 2 8 18
9ISMA                : 15
AFFECT               : 9
ALORS                : 
AW                   : 
BAYNAMA              : 2
DERB                 : 14
DIR                  : 
IDA                  : 1
KBER                 : 3
KHROJ                : 
KLMA                 : 
KTEB                 : 8
MA39OFALIMN          : 
MA39OFALISSER        : 
MINAJL               : 
MOTAGHAYIR           : 9 10
NA9IS                : 12 20
SCAN                 : 
SGHER                : 4
TABITA               : 
TOKHALIF             : 6
TOSSAWI              : 5
W                    : 
WLA                  : 
ZA2ID                : 11
error                : 
{                    : 1
}                    : 1

Nonterminals, with rules where they appear

comparaison          : 1 2
empty                : 
expression           : 1 2 3 3 4 4 5 5 6 6 7 8 9 11 12 18 20
factor               : 14 15 16
statement            : 0
term                 : 11 12 13 14 15

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . IDA 9AWSLISSER comparaison 9AWSLIMEN { expression }
    (2) statement -> . BAYNAMA 9AWSLISSER comparaison 9AWSLIMEN expression
    (7) statement -> . expression
    (8) statement -> . KTEB 9AWSLISSER expression 9AWSLIMEN
    (9) statement -> . MOTAGHAYIR AFFECT expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    IDA             shift and go to state 2
    BAYNAMA         shift and go to state 5
    KTEB            shift and go to state 6
    MOTAGHAYIR      shift and go to state 7
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    statement                      shift and go to state 1
    expression                     shift and go to state 4
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 1

    (0) S' -> statement .



state 2

    (1) statement -> IDA . 9AWSLISSER comparaison 9AWSLIMEN { expression }

    9AWSLISSER      shift and go to state 12


state 3

    (18) factor -> 9AWSLISSER . expression 9AWSLIMEN
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 13
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 4

    (7) statement -> expression .
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    $end            reduce using rule 7 (statement -> expression .)
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 5

    (2) statement -> BAYNAMA . 9AWSLISSER comparaison 9AWSLIMEN expression

    9AWSLISSER      shift and go to state 17


state 6

    (8) statement -> KTEB . 9AWSLISSER expression 9AWSLIMEN

    9AWSLISSER      shift and go to state 18


state 7

    (9) statement -> MOTAGHAYIR . AFFECT expression
    (10) expression -> MOTAGHAYIR .

    AFFECT          shift and go to state 19
    ZA2ID           reduce using rule 10 (expression -> MOTAGHAYIR .)
    NA9IS           reduce using rule 10 (expression -> MOTAGHAYIR .)
    $end            reduce using rule 10 (expression -> MOTAGHAYIR .)


state 8

    (13) expression -> term .
    (14) term -> term . DERB factor
    (15) term -> term . 9ISMA factor

    ZA2ID           reduce using rule 13 (expression -> term .)
    NA9IS           reduce using rule 13 (expression -> term .)
    $end            reduce using rule 13 (expression -> term .)
    9AWSLIMEN       reduce using rule 13 (expression -> term .)
    KBER            reduce using rule 13 (expression -> term .)
    SGHER           reduce using rule 13 (expression -> term .)
    TOSSAWI         reduce using rule 13 (expression -> term .)
    TOKHALIF        reduce using rule 13 (expression -> term .)
    }               reduce using rule 13 (expression -> term .)
    DERB            shift and go to state 20
    9ISMA           shift and go to state 21


state 9

    (20) expression -> NA9IS . expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 22
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 10

    (16) term -> factor .

    DERB            reduce using rule 16 (term -> factor .)
    9ISMA           reduce using rule 16 (term -> factor .)
    ZA2ID           reduce using rule 16 (term -> factor .)
    NA9IS           reduce using rule 16 (term -> factor .)
    $end            reduce using rule 16 (term -> factor .)
    9AWSLIMEN       reduce using rule 16 (term -> factor .)
    KBER            reduce using rule 16 (term -> factor .)
    SGHER           reduce using rule 16 (term -> factor .)
    TOSSAWI         reduce using rule 16 (term -> factor .)
    TOKHALIF        reduce using rule 16 (term -> factor .)
    }               reduce using rule 16 (term -> factor .)


state 11

    (17) factor -> 3ADAD .

    DERB            reduce using rule 17 (factor -> 3ADAD .)
    9ISMA           reduce using rule 17 (factor -> 3ADAD .)
    ZA2ID           reduce using rule 17 (factor -> 3ADAD .)
    NA9IS           reduce using rule 17 (factor -> 3ADAD .)
    $end            reduce using rule 17 (factor -> 3ADAD .)
    9AWSLIMEN       reduce using rule 17 (factor -> 3ADAD .)
    KBER            reduce using rule 17 (factor -> 3ADAD .)
    SGHER           reduce using rule 17 (factor -> 3ADAD .)
    TOSSAWI         reduce using rule 17 (factor -> 3ADAD .)
    TOKHALIF        reduce using rule 17 (factor -> 3ADAD .)
    }               reduce using rule 17 (factor -> 3ADAD .)


state 12

    (1) statement -> IDA 9AWSLISSER . comparaison 9AWSLIMEN { expression }
    (3) comparaison -> . expression KBER expression
    (4) comparaison -> . expression SGHER expression
    (5) comparaison -> . expression TOSSAWI expression
    (6) comparaison -> . expression TOKHALIF expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    comparaison                    shift and go to state 23
    expression                     shift and go to state 24
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 13

    (18) factor -> 9AWSLISSER expression . 9AWSLIMEN
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    9AWSLIMEN       shift and go to state 25
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 14

    (10) expression -> MOTAGHAYIR .

    9AWSLIMEN       reduce using rule 10 (expression -> MOTAGHAYIR .)
    ZA2ID           reduce using rule 10 (expression -> MOTAGHAYIR .)
    NA9IS           reduce using rule 10 (expression -> MOTAGHAYIR .)
    $end            reduce using rule 10 (expression -> MOTAGHAYIR .)
    KBER            reduce using rule 10 (expression -> MOTAGHAYIR .)
    SGHER           reduce using rule 10 (expression -> MOTAGHAYIR .)
    TOSSAWI         reduce using rule 10 (expression -> MOTAGHAYIR .)
    TOKHALIF        reduce using rule 10 (expression -> MOTAGHAYIR .)
    }               reduce using rule 10 (expression -> MOTAGHAYIR .)


state 15

    (11) expression -> expression ZA2ID . term
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    term                           shift and go to state 26
    factor                         shift and go to state 10

state 16

    (12) expression -> expression NA9IS . term
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    term                           shift and go to state 27
    factor                         shift and go to state 10

state 17

    (2) statement -> BAYNAMA 9AWSLISSER . comparaison 9AWSLIMEN expression
    (3) comparaison -> . expression KBER expression
    (4) comparaison -> . expression SGHER expression
    (5) comparaison -> . expression TOSSAWI expression
    (6) comparaison -> . expression TOKHALIF expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    comparaison                    shift and go to state 28
    expression                     shift and go to state 24
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 18

    (8) statement -> KTEB 9AWSLISSER . expression 9AWSLIMEN
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 29
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 19

    (9) statement -> MOTAGHAYIR AFFECT . expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 30
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 20

    (14) term -> term DERB . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    factor                         shift and go to state 31

state 21

    (15) term -> term 9ISMA . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    factor                         shift and go to state 32

state 22

    (20) expression -> NA9IS expression .
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    ZA2ID           reduce using rule 20 (expression -> NA9IS expression .)
    NA9IS           reduce using rule 20 (expression -> NA9IS expression .)
    $end            reduce using rule 20 (expression -> NA9IS expression .)
    9AWSLIMEN       reduce using rule 20 (expression -> NA9IS expression .)
    KBER            reduce using rule 20 (expression -> NA9IS expression .)
    SGHER           reduce using rule 20 (expression -> NA9IS expression .)
    TOSSAWI         reduce using rule 20 (expression -> NA9IS expression .)
    TOKHALIF        reduce using rule 20 (expression -> NA9IS expression .)
    }               reduce using rule 20 (expression -> NA9IS expression .)

  ! ZA2ID           [ shift and go to state 15 ]
  ! NA9IS           [ shift and go to state 16 ]


state 23

    (1) statement -> IDA 9AWSLISSER comparaison . 9AWSLIMEN { expression }

    9AWSLIMEN       shift and go to state 33


state 24

    (3) comparaison -> expression . KBER expression
    (4) comparaison -> expression . SGHER expression
    (5) comparaison -> expression . TOSSAWI expression
    (6) comparaison -> expression . TOKHALIF expression
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    KBER            shift and go to state 34
    SGHER           shift and go to state 35
    TOSSAWI         shift and go to state 36
    TOKHALIF        shift and go to state 37
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 25

    (18) factor -> 9AWSLISSER expression 9AWSLIMEN .

    DERB            reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    9ISMA           reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    ZA2ID           reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    NA9IS           reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    $end            reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    9AWSLIMEN       reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    KBER            reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    SGHER           reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    TOSSAWI         reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    TOKHALIF        reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)
    }               reduce using rule 18 (factor -> 9AWSLISSER expression 9AWSLIMEN .)


state 26

    (11) expression -> expression ZA2ID term .
    (14) term -> term . DERB factor
    (15) term -> term . 9ISMA factor

    ZA2ID           reduce using rule 11 (expression -> expression ZA2ID term .)
    NA9IS           reduce using rule 11 (expression -> expression ZA2ID term .)
    $end            reduce using rule 11 (expression -> expression ZA2ID term .)
    9AWSLIMEN       reduce using rule 11 (expression -> expression ZA2ID term .)
    KBER            reduce using rule 11 (expression -> expression ZA2ID term .)
    SGHER           reduce using rule 11 (expression -> expression ZA2ID term .)
    TOSSAWI         reduce using rule 11 (expression -> expression ZA2ID term .)
    TOKHALIF        reduce using rule 11 (expression -> expression ZA2ID term .)
    }               reduce using rule 11 (expression -> expression ZA2ID term .)
    DERB            shift and go to state 20
    9ISMA           shift and go to state 21


state 27

    (12) expression -> expression NA9IS term .
    (14) term -> term . DERB factor
    (15) term -> term . 9ISMA factor

    ZA2ID           reduce using rule 12 (expression -> expression NA9IS term .)
    NA9IS           reduce using rule 12 (expression -> expression NA9IS term .)
    $end            reduce using rule 12 (expression -> expression NA9IS term .)
    9AWSLIMEN       reduce using rule 12 (expression -> expression NA9IS term .)
    KBER            reduce using rule 12 (expression -> expression NA9IS term .)
    SGHER           reduce using rule 12 (expression -> expression NA9IS term .)
    TOSSAWI         reduce using rule 12 (expression -> expression NA9IS term .)
    TOKHALIF        reduce using rule 12 (expression -> expression NA9IS term .)
    }               reduce using rule 12 (expression -> expression NA9IS term .)
    DERB            shift and go to state 20
    9ISMA           shift and go to state 21


state 28

    (2) statement -> BAYNAMA 9AWSLISSER comparaison . 9AWSLIMEN expression

    9AWSLIMEN       shift and go to state 38


state 29

    (8) statement -> KTEB 9AWSLISSER expression . 9AWSLIMEN
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    9AWSLIMEN       shift and go to state 39
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 30

    (9) statement -> MOTAGHAYIR AFFECT expression .
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    $end            reduce using rule 9 (statement -> MOTAGHAYIR AFFECT expression .)
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 31

    (14) term -> term DERB factor .

    DERB            reduce using rule 14 (term -> term DERB factor .)
    9ISMA           reduce using rule 14 (term -> term DERB factor .)
    ZA2ID           reduce using rule 14 (term -> term DERB factor .)
    NA9IS           reduce using rule 14 (term -> term DERB factor .)
    $end            reduce using rule 14 (term -> term DERB factor .)
    9AWSLIMEN       reduce using rule 14 (term -> term DERB factor .)
    KBER            reduce using rule 14 (term -> term DERB factor .)
    SGHER           reduce using rule 14 (term -> term DERB factor .)
    TOSSAWI         reduce using rule 14 (term -> term DERB factor .)
    TOKHALIF        reduce using rule 14 (term -> term DERB factor .)
    }               reduce using rule 14 (term -> term DERB factor .)


state 32

    (15) term -> term 9ISMA factor .

    DERB            reduce using rule 15 (term -> term 9ISMA factor .)
    9ISMA           reduce using rule 15 (term -> term 9ISMA factor .)
    ZA2ID           reduce using rule 15 (term -> term 9ISMA factor .)
    NA9IS           reduce using rule 15 (term -> term 9ISMA factor .)
    $end            reduce using rule 15 (term -> term 9ISMA factor .)
    9AWSLIMEN       reduce using rule 15 (term -> term 9ISMA factor .)
    KBER            reduce using rule 15 (term -> term 9ISMA factor .)
    SGHER           reduce using rule 15 (term -> term 9ISMA factor .)
    TOSSAWI         reduce using rule 15 (term -> term 9ISMA factor .)
    TOKHALIF        reduce using rule 15 (term -> term 9ISMA factor .)
    }               reduce using rule 15 (term -> term 9ISMA factor .)


state 33

    (1) statement -> IDA 9AWSLISSER comparaison 9AWSLIMEN . { expression }

    {               shift and go to state 40


state 34

    (3) comparaison -> expression KBER . expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 41
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 35

    (4) comparaison -> expression SGHER . expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 42
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 36

    (5) comparaison -> expression TOSSAWI . expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 43
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 37

    (6) comparaison -> expression TOKHALIF . expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 44
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 38

    (2) statement -> BAYNAMA 9AWSLISSER comparaison 9AWSLIMEN . expression
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 45
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 39

    (8) statement -> KTEB 9AWSLISSER expression 9AWSLIMEN .

    $end            reduce using rule 8 (statement -> KTEB 9AWSLISSER expression 9AWSLIMEN .)


state 40

    (1) statement -> IDA 9AWSLISSER comparaison 9AWSLIMEN { . expression }
    (10) expression -> . MOTAGHAYIR
    (11) expression -> . expression ZA2ID term
    (12) expression -> . expression NA9IS term
    (13) expression -> . term
    (20) expression -> . NA9IS expression
    (14) term -> . term DERB factor
    (15) term -> . term 9ISMA factor
    (16) term -> . factor
    (17) factor -> . 3ADAD
    (18) factor -> . 9AWSLISSER expression 9AWSLIMEN

    MOTAGHAYIR      shift and go to state 14
    NA9IS           shift and go to state 9
    3ADAD           shift and go to state 11
    9AWSLISSER      shift and go to state 3

    expression                     shift and go to state 46
    term                           shift and go to state 8
    factor                         shift and go to state 10

state 41

    (3) comparaison -> expression KBER expression .
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    9AWSLIMEN       reduce using rule 3 (comparaison -> expression KBER expression .)
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 42

    (4) comparaison -> expression SGHER expression .
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    9AWSLIMEN       reduce using rule 4 (comparaison -> expression SGHER expression .)
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 43

    (5) comparaison -> expression TOSSAWI expression .
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    9AWSLIMEN       reduce using rule 5 (comparaison -> expression TOSSAWI expression .)
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 44

    (6) comparaison -> expression TOKHALIF expression .
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    9AWSLIMEN       reduce using rule 6 (comparaison -> expression TOKHALIF expression .)
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 45

    (2) statement -> BAYNAMA 9AWSLISSER comparaison 9AWSLIMEN expression .
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    $end            reduce using rule 2 (statement -> BAYNAMA 9AWSLISSER comparaison 9AWSLIMEN expression .)
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 46

    (1) statement -> IDA 9AWSLISSER comparaison 9AWSLIMEN { expression . }
    (11) expression -> expression . ZA2ID term
    (12) expression -> expression . NA9IS term

    }               shift and go to state 47
    ZA2ID           shift and go to state 15
    NA9IS           shift and go to state 16


state 47

    (1) statement -> IDA 9AWSLISSER comparaison 9AWSLIMEN { expression } .

    $end            reduce using rule 1 (statement -> IDA 9AWSLISSER comparaison 9AWSLIMEN { expression } .)

